# linuxcnc_testbed

./: .gitignore  CITATION.cff  README.md  bibliography.html  fdl-1.3.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/: .gitignore  deploy.sh  main.tex  pyproject.toml  requirements.txt
docs/source/: bibliografia.md  bibliografia.rst.bak  conf.py  index.md  index.rst.bak
docs/source/_extensions/: extimage.py
docs/source/_pygments/: hal_lexer.py
docs/source/_static/css/: furo_custom.css  tables.css
docs/source/bib/: references.bib
docs/source/doc/01_introduccion/: introduccion.md
docs/source/doc/01_introduction/: introduction.md
docs/source/doc/02_igus_dryve_d1/: 00_index.md  01_pagina_start.md  01_start_page.md  02_motor_page.md  02_pagina_motor.md  03_axis_page.md  03_pagina_axis.md  04_communication_page.md  04_pagina_communication.md  05_inputs_ouputs_page.md  05_pagina_inputs_ouputs.md  06_drive_profile_page.md  06_pagina_drive_profile.md  07_oscilloscope_page.md  07_pagina_oscilloscope.md
docs/source/doc/03_linuxcnc/: 00_index.md  01_instalacion.md  01_installation.md  02_analisis_latencia.md  02_latency_analysis.md  03_ajuste_latencia.md  03_latency_tuning.md  04_configuracion_mesa_7i96s.md  04_mesa_7i96s_configuration.md  05_configuracion_mesa_7i77.md  05_mesa_7i77_configuration.md  06_linuxcnc_introduccion.md  06_linuxcnc_introduction.md  07_linuxcnc_basic_usage.md  07_linuxcnc_uso_basico.md  08_linuxcnc_configuracion.md  08_linuxcnc_configuration.md
docs/source/latex/: endofbody.sty  preamble.sty
(+68 files in other folders)
